--- a/apps/web/src/styles/utilities/_helpers.scss
+++ b/apps/web/src/styles/utilities/_helpers.scss
@@ -81,8 +81,8 @@
 // --- Full Bleed (break out of container) ---
 
 .u-full-bleed {
-  width: 100vw;
-  margin-inline-start: calc(50% - 50vw);
+  width: 100svw;
+  margin-inline-start: calc(50% - 50svw);
 }
 
 // --- Spacing Utilities (margin-block-end) ---
